Updated cache example.