@@ -2,7 +2,7 @@ package no.scienta.lambada.cache;
 
 import java.awt.Image;
 import java.awt.image.BufferedImage;
-import java.net.URL;
+import java.net.URI;
 
 import org.junit.Test;
 
@@ -12,13 +12,14 @@ public class ConcurrentCacheTest {
 
     @Test
     public void testCache() throws Exception {
-        ConcurrentCache<URL, Image> imageCache = new ConcurrentCache<>(this::fetchImage);
+        ConcurrentCache<URI, Image> imageCache = new ConcurrentCache<>(this::fetchImage);
 
-        URL url = new URL("http://foo.bar");
-        assertSame(imageCache.get(url), imageCache.get(url));
+        URI uri = new URI("http://foo.bar");
+        assertSame(imageCache.get(uri), imageCache.get(uri));
     }
 
-    private Image fetchImage(URL url) {
+    private Image fetchImage(URI url) {
+        // TODO: Fetch image data from URI
         return new BufferedImage(400, 300, BufferedImage.TYPE_4BYTE_ABGR);
     }
 }
